# VideoMemory

./: .gitignore  FAST_PIPELINE_SUMMARY.md  README.md  concat_videos.py  env.example  langgraph.json  main.py  promprt_suggestion.txt  prompt.txt  pyproject.toml
datasets/StoryBench/12shot/: Blue_Cello_Case.txt  Crimson_Garment_Bag.txt  Cyan_Portfolio.txt  Green_Casserole_Dish.txt  Lime_Green_Duffel_Bag.txt  Orange_Cooler.txt  Pink_Sculpture.txt  Purple_Travel_Case.txt  Red_Trunk.txt  Yellow_Satchel.txt
datasets/StoryBench/16shot/: Blue_Library_Cart.txt  Blue_Tarp.txt  Green_Umbrella.txt  Orange_Tackle_Box.txt  Orange_Telescope_Case.txt  Pink_Poster_Tube.txt  (+4 more)
datasets/cases/: BreathofMarch.txt  OldWatch.txt  SignalonEuropa.txt  Sunflower.txt
datasets/raw_scripts/: DeadPool.txt  FronzenII.txt  Harry.txt  HarryPotter.txt  Juno.txt  TopGunMaverick.txt
docs/: keyframe_fast_vs_supervisor.md
examples/: fast_pipeline_usage.py
scripts/: 1.txt  2.txt  Animation2D_fight.txt  LUMEN.txt  Last_Letter.txt  One_Minute_To_Launch.txt  README.md  batch_generate_images.py
src/: agents.py  configuration.py  graph.py  llm.py  nodes.py  prompts.py  schema.py  state.py  utils.py
src/tools/: Wan22_I2V_A14B.py  __init__.py  concat_videos.py  mock_image_tool.py  mock_video_tool.py  nano_banana.py  nano_banana_tool.py  prompt_generators.py  sora2_tool.py  update_memory_bank.py  visualization_tool.py
test/: test.ipynb  test_cinetography.py  test_keyframe.py  test_keyframe_fast.py  test_keyframe_generation.py  test_keyframe_parallel.py  test_keyframe_supervisor.py  test_memory_agent.py  test_screenwriter_storyboard.py  test_screenwriter_storyboard_keyframe.py  test_storyboard_agent.py  test_video_memory.py  test_visualization_agent.py
(+92 files in other folders)
